[gd_scene load_steps=12 format=3 uid="uid://1x6b5yspn3ss"]

[ext_resource type="Texture2D" path="res://sprites/objects/newbackground.png" id="1_r1nce"]
[ext_resource type="PackedScene" uid="uid://cbwdwr7fmy7fr" path="res://scenes/player.tscn" id="2_lb3l7"]
[ext_resource type="PackedScene" uid="uid://dm1a1ibogp34m" path="res://scenes/npc_2.tscn" id="3_4i1xq"]
[ext_resource type="PackedScene" uid="uid://dqoie45rsj0c5" path="res://scenes/npc.tscn" id="3_sokjx"]
[ext_resource type="Script" path="res://scripts/chat.gd" id="4_2ayif"]
[ext_resource type="Script" path="res://scripts/WorldLineEdit.gd" id="5_cahbm"]
[ext_resource type="Script" path="res://scripts/WorldResponse.gd" id="5_okymo"]
[ext_resource type="Script" path="res://scripts/escapeinst.gd" id="7_aiyee"]
[ext_resource type="AudioStream" uid="uid://b02jef21vdgm1" path="res://fluteThingVVideoGame.mp3" id="7_t1vkv"]
[ext_resource type="Script" path="res://scripts/AudioStreamPlayer2D.gd" id="8_pv2ii"]
[ext_resource type="Script" path="res://scenes/enterToCont.gd" id="9_2ogjd"]

[node name="world" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 1.0
offset_right = 925.0
offset_bottom = 861.0
texture = ExtResource("1_r1nce")

[node name="NPC" parent="." instance=ExtResource("3_sokjx")]
position = Vector2(436, 190)
scale = Vector2(2, 2)

[node name="NPC2" parent="." instance=ExtResource("3_4i1xq")]
position = Vector2(535, 69)

[node name="player" parent="." instance=ExtResource("2_lb3l7")]
position = Vector2(272, 190)
scale = Vector2(2, 2)

[node name="chat" type="Node" parent="."]
script = ExtResource("4_2ayif")

[node name="WorldLineEdit" type="LineEdit" parent="chat"]
offset_left = 22.0
offset_top = 307.0
offset_right = 738.0
offset_bottom = 389.0
placeholder_text = "Type Here"
script = ExtResource("5_cahbm")

[node name="WorldResponse" type="Label" parent="chat"]
offset_left = 20.0
offset_top = 261.0
offset_right = 755.0
offset_bottom = 402.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 13
text = "testinggg"
autowrap_mode = 3
script = ExtResource("5_okymo")

[node name="escapeinst" type="Label" parent="chat"]
offset_left = 10.0
offset_top = 4.0
offset_right = 329.0
offset_bottom = 57.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "\"Press 'Esc' to Escape\""
script = ExtResource("7_aiyee")

[node name="enterToCont" type="Label" parent="chat"]
offset_left = 549.0
offset_top = 395.0
offset_right = 759.0
offset_bottom = 418.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "\"Press 'return' to continue\""
script = ExtResource("9_2ogjd")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-1, 323)
stream = ExtResource("7_t1vkv")
autoplay = true
script = ExtResource("8_pv2ii")

[connection signal="text_submitted" from="chat/WorldLineEdit" to="chat/WorldLineEdit" method="_on_text_submitted"]
